--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     ESTILOS ORIGINALES (MANTENIDOS AL 100% - RESPETO TOTAL)
     ================================================================= */
     body {
-        font-family: "Bebas Neue", sans-serif;
+        font-family: 'Inter', sans-serif;
         background-color: #000000;
         background-image: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.94)), url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop');
         background-size: cover;
@@ -14,11 +14,11 @@
         -webkit-text-size-adjust: 100%; /* Evita que iOS cambie el tamaño de letra al rotar */
     }
 
-    .bebas-neue-regular {
+    /*.bebas-neue-regular {
         font-family: "Bebas Neue", sans-serif;
         font-weight: 400;
         font-style: normal;
-        }
+        }*/
             
     .viking-red { color: #FF0000; }
     .viking-bg-red { background-color: #FF0000; }
